fixes action bar

--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -58,7 +58,7 @@
 
                 <div class="center-category" id="center" data-shape="Rectangle">
                     <h4>CourseMapper</h4>
-                    is a mind map based collaborative course annotation platform.
+                    is a Mind Map Based Collaborative Course Annotation and Analytics Platform
                 </div>
 
             </div>
