--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -20,20 +20,17 @@
                 </div>
                 <div class="box-body">
                     <p>
-                        CourseMapper is a collaborative learning tools, where students can work together on course
-                        contents.
-                        CourseMapper contains many features, such as: Collaborative Tool to create course map, Video
-                        viewer and
-                        annotation tool for lecture videos, and PDF reader and annotation tool.
-                        And many other new features that may come in the future.
+                        CourseMapper is a mind map-based collaborative course annotation and analytics platform that
+                        fosters collaboration and interaction around pdf/video learning materials, supported by visual
+                        learning analytics.
                     </p>
                     <br>
-                    <p>CourseMapper project is supervised
-                        Supervised by:<strong> Dr. rer. nat Mohamed Amine Chatti</strong></p>
+                    <p>
+                        The CourseMapper project is supervised by <strong> Dr. Mohamed Amine Chatti</strong></p>
                 </div>
             </div>
             <div class="box-header">
-                <h3>Teams </h3>
+                <h3>Features/Team </h3>
             </div>
             <div class="box">
                 <div class="box-header">
