--- a/views/admin-lte/course/map/editContentNodeModal.ejs
+++ b/views/admin-lte/course/map/editContentNodeModal.ejs
@@ -4,7 +4,7 @@
         <div class="col-xs-12 col-md-5 col-centered">
             <div class="box no-border" ng-init="init()">
                 <div class="box-header with-border">
-                    <h3 class="box-title">{{nodeModaltitle}}</h3>
+                    <h3 class="box-title">Edit Content Node</h3>
 
                     <div class="box-tools pull-right">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
@@ -17,9 +17,9 @@
                           novalidate>
                         <fieldset>
                             <div class="control-group">
-                                <label class="control-label" for="name">{{currentNodeAction.typeText}} name</label>
+                                <label class="control-label" for="name">Content Node Name</label>
 
-                                <p class="help-block">{{currentNodeAction.typeText}} name can contain any letters or
+                                <p class="help-block">It can contain any letters or
                                     numbers</p>
 
                                 <div class="controls"
