--- a/views/course-analytics/top-content.ejs
+++ b/views/course-analytics/top-content.ejs
@@ -1,7 +1,7 @@
 <div class="row" ng-controller="TopContentController" style="background-color: #ecf0f5;">
     <div class="col-xs-12">
         <div class="top-content">
-            <div class="info-box bg-yellow">
+            <div class="info-box bg-yellow" style="margin-bottom: 0px">
                 <span class="info-box-icon">
                     <!--<i class="fa fa-file-pdf-o"></i>-->
                     <i class="ion ion-ios-copy-outline"></i>
@@ -13,7 +13,7 @@
                     <span class="progress-description" ng-if="topAnnotatedPdf !== null">{{topAnnotatedPdf.count}} pdf annotations</span>
                 </div>
             </div>
-            <div class="info-box bg-red">
+            <div class="info-box bg-red" style="margin-bottom: 0px">
                 <span class="info-box-icon">
                     <i class="ion ion-ios-videocam-outline"></i>
                 </span>
@@ -24,14 +24,14 @@
                     <span class="progress-description" ng-if="topAnnotatedVideo !== null">{{topAnnotatedVideo.count}} video annotations</span>
                 </div>
             </div>
-            <div class="info-box bg-aqua">
+            <div class="info-box bg-aqua" style="margin-bottom: 0px">
                 <span class="info-box-icon">
                     <i class="ion ion-link"></i>
                 </span>
                 <div class="info-box-content">
                     <span class="info-box-text">Top Node with link</span>
                     <span class="info-box-number" ng-if="topLinkNode === null">None</span>
-                    <span class="info-box-number" ng-if="topLinkNode !== null"><a href="/treeNode/{{topLinkNode.nodeId}}/#/cid/{{topLinkNode.courseId}}/nid/{{topLinkNode.nodeId}}?tab=pdf" class="">{{topLinkNode.contentName}}</a></span>
+                    <span class="info-box-number" ng-if="topLinkNode !== null"><a href="/treeNode/{{topLinkNode.nodeId}}/#/cid/{{topLinkNode.courseId}}/nid/{{topLinkNode.nodeId}}?tab=links" class="">{{topLinkNode.contentName}}</a></span>
                     <span class="progress-description" ng-if="topLinkNode !== null">{{topLinkNode.count}} links</span>
                 </div>
             </div>
