Course Breakdown Widget - Add ui.bootstrap angular library dependency to app system root

--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -20,6 +20,8 @@
 <script src="/angular/angular-cookies.min.js"></script>
 <script src="/angular/bootstrap-colorpicker-module.js"></script>
 <script src="/angular/angular-wysiwyg.min.js"></script>
+<script src="/angular/ui-bootstrap-tpls-0.10.0.min.js"></script>
+<!--<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>-->
 <script src="/quill/quill.js"></script>
 <script src="/angular-quill/angular-quill.js"></script>
 <script src="/angular/ocLazyLoad.min.js"></script>
@@ -31,6 +33,7 @@
 <script src="/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="/angular-toastr/angular-toastr.min.js"></script>
 <script src="/angular-toastr/angular-toastr.tpls.js"></script>
+
 
 <script src="/libs/bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
 <script src="/libs/videogular/videogular.min.js"></script>
