--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -7,15 +7,15 @@
     <!-- Bootstrap 3.3.2-->
     <link href="/bower/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="/bower/bootstrap-timepicker/css/bootstrap-timepicker.min.css" type="text/css"/>
-    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/bower/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="/bower/Ionicons/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
-    <link href="/gridstack/gridstack.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/bower/gridstack/dist/gridstack.min.css" rel="stylesheet" type="text/css"/>
     <link href="/bower/quill/dist/quill.base.css" rel="stylesheet" type="text/css"/>
     <link href="/bower/quill/dist/quill.snow.css" rel="stylesheet" type="text/css"/>
     <link rel="icon" href="/favicon.png" type="image/png"/>
 
     <!-- Themes -->
-    <link href="/bower/AdminLTE/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
     <link href="/bower/AdminLTE/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css"/>
     <link href="/css/app.css" rel="stylesheet" type="text/css"/>
     <link href="/css/posts.css" rel="stylesheet" type="text/css"/>
