--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -5,12 +5,12 @@
 <script src="/jquery/jquery-ui.min.js"></script>
 <script src="/jquery/jquery.ui.touch-punch.min.js"></script>
 <script src="/jquery/jsPlumb-1.7.10.js"></script>
-
 <script src="/jquery/jquery.simulate.js"></script>
 <script src="/jquery/jquery.simulate.ext.js"></script>
 <script src="/jquery/jquery.simulate.drag-n-drop.js"></script>
 
 <script src="/bower/lodash/lodash.min.js"></script>
+<script src="/bower/gridstack/dist/gridstack.min.js"></script>
 <script src="/bower/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/bower/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js"></script>
 <script src="/angular/angular.min.js"></script>
