--- a/views/admin-lte/oauth/oHeader.ejs
+++ b/views/admin-lte/oauth/oHeader.ejs
@@ -11,7 +11,7 @@
     <link rel="icon" href="/favicon.png" type="image/png"/>
 
     <!-- Themes -->
-    <link href="/bower/AdminLTE/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
     <link href="/bower/AdminLTE/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css"/>
     <link href="/css/app.css" rel="stylesheet" type="text/css"/>
     <link href="/css/posts.css" rel="stylesheet" type="text/css"/>
