--- a/public/js/video-annotations/styles.css
+++ b/public/js/video-annotations/styles.css
@@ -123,3 +123,12 @@ videogular .fp-tooltip {
 videogular .fp-tooltip-arrow {
   border-top-color: rgba(30, 30, 30, 0.6);
 }
+
+/* Custom button */
+videogular vg-resume-button {
+  display: table-cell;
+  width: 50px;
+  vertical-align: middle;
+  text-align: center;
+  cursor: pointer;
+}
