use custom youtube plugin, scroll to active annotation in VA

--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -41,7 +41,7 @@
 <script src="/bower/videogular-controls/vg-controls.min.js"></script>
 <script src="/bower/videogular-angulartics/vg-analytics.min.js"></script>
 <script src="/bower/videogular-overlay-play/vg-overlay-play.min.js"></script>
-<script src="/bower/videogular-youtube/youtube.js"></script>
+<!--<script src="/bower/videogular-youtube/youtube.js"></script>-->
 
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
 <script src="/js/countmap/countmap.js"></script>
