fix drag drop event gridstakc

--- a/views/admin-lte/profile.ejs
+++ b/views/admin-lte/profile.ejs
@@ -51,11 +51,11 @@
 
                 <!-- analytics-->
                 <div class="grid-stack col-sm-12 col-md-12" id="user-profile-widgets"
-                     ng-init="location='user-profile';
-                                  initiateDraggableGrid('user-profile');">
+                     ng-init="location='user-profile'; initiateDraggableGrid('user-profile');"
+                     >
                     <div class="grid-stack-item"
                          data-gs-no-resize="yes"
-                         ng-repeat="wdg in widgets" id="w{{wdg._id}}">
+                         ng-repeat="wdg in widgets" id="w{{wdg._id}}" >
                         <div class="grid-stack-item-content">
                             <div class="box no-shadow">
                                 <div class="box-header with-border">
