--- a/public/css/app.css
+++ b/public/css/app.css
@@ -446,7 +446,7 @@ li.disabled i {
   width: auto;
   position: absolute;
   box-shadow: 0 0 10px grey;
-  top: 0
+  top: -2px;
 }
 
 .dropdown-menu.category li {
@@ -839,7 +839,7 @@ li.active .voting .vote-total {
   user-select: none
 }
 
-.collapse-button {
+.collapse-button{
   display: none;
   position: absolute;
   top: 1px;
@@ -847,7 +847,19 @@ li.active .voting .vote-total {
   height: 16px;
   width: 16px;
 }
+.collapse-button-home,
+.collapse-button-home2{
+    position: absolute;
+    top: 1px;
+    left: 3px;
+    height: 16px;
+    width: 16px;
+}
 
+.collapse-button-home2{
+    top: 0px;
+    left: 2px;
+}
 .collapse-button.hasChildren {
   display: table-cell !important;
 }
