--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -38,7 +38,9 @@
 <script src="/bower/videogular-controls/vg-controls.min.js"></script>
 <script src="/bower/videogular-angulartics/vg-analytics.min.js"></script>
 <script src="/bower/videogular-overlay-play/vg-overlay-play.min.js"></script>
-<!--<script src="/bower/videogular-youtube/youtube.js"></script>-->
+<script src="/bower/videogular-youtube/youtube.js"></script>
+<script src="/bower/videogular-vimeo/vg-vimeo.js"></script>
+<script src="/bower/vimeo-jquery-api/dist/jquery.vimeo.api.min.js"></script>
 
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
 <script src="/js/countmap/countmap.js"></script>
