--- a/views/admin-lte/cm-admin/adminusers.ejs
+++ b/views/admin-lte/cm-admin/adminusers.ejs
@@ -5,7 +5,7 @@
         <ul class="nav nav-tabs">
             <li class="active">
                 <a data-toggle="tab" data-target="#tab_1">Admin Users</a></li>
-            <li class="active">
+            <li>
                 <a data-toggle="tab" data-target="#tab_2">Add Admin</a></li>
 
         </ul>
@@ -20,7 +20,7 @@
                             <span ng-show="sortType == 'username' && !sortReverse" class="fa fa-caret-down"></span>
                             <span ng-show="sortType == 'username' && sortReverse" class="fa fa-caret-up"></span>
                         </th>
-                        <th>Activate</th>
+                        <th>Delete</th>
                     </tr>
                     <tr ng-repeat="usera in users | orderBy:sortType:sortReverse">
                         <td>
@@ -28,7 +28,7 @@
                         </td>
                         <td>
                             <button class="btn btn-sm btn-warning"
-                                    ng-click="deleteUser(user._id)">
+                                    ng-click="deleteUser(usera._id)">
                                 Delete
                             </button>
                         </td>
@@ -36,7 +36,7 @@
                 </table>
             </div>
 
-            <div class="tab-pane active" id="tab_2">
+            <div class="tab-pane" id="tab_2">
                 <div class="box">
                     <div class="box-body with-border">
 
@@ -45,18 +45,27 @@
                         <div>
                             <form role="form" ng-submit="saveUserForm()" id="user">
                                 <div class="col-xs-6 input-group input-group-sm">
+                                    Username:
                                     <input type="text" name="username" class="form-control input-sm col-xs-3"
                                            placeholder="username" ng-model="formData.username"/>
+                                </div>
+                                <div class="col-xs-6 input-group input-group-sm">
+                                    Password:
                                     <input type="password" name="password" class="form-control input-sm col-xs-3"
                                            ng-model="formData.password"/>
+                                </div>
+
+                                <div class="col-xs-6 input-group input-group-sm">
+                                    Email:
                                     <input type="email" name="email" class="form-control input-sm col-xs-3"
                                            placeholder="email" ng-model="formData.email"/>
+                                </div>
+                                <br>
                               <span class="input-group-btn">
                               <button class="btn btn-info btn-flat" type="submit"><i class="fa fa-plus"></i> Add New
                                   Admin
                               </button>
                               </span>
-                                </div>
                             </form>
                         </div>
                     </div>
