--- a/views/admin-lte/cm-admin/index.ejs
+++ b/views/admin-lte/cm-admin/index.ejs
@@ -5,12 +5,13 @@
     <% include mainMenu %>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper content-wrapper-admin" >
+    <div class="content-wrapper content-wrapper-admin">
         <section class="content-header">
             <ol class="breadcrumb" ng-cloak ng-show="$route.current.locals">
                 <li><a href="/cm-admin/"><i class="fa fa-home"></i> Admin Home</a></li>
                 <li ng-repeat="bread in $route.current.locals.pd.breads">
-                    <a ng-href="{{bread.a}}" ng-class="{'active':bread.active}" ng-show="bread.title">{{bread.title}}</a>
+                    <a ng-href="{{bread.a}}" ng-class="{'active':bread.active}"
+                       ng-show="bread.title">{{bread.title}}</a>
                 </li>
                 <li ng-show="$routeParams.category">{{$routeParams.category}}</li>
             </ol>
@@ -31,6 +32,4 @@
 
 <% include ../jsfooter %>
 <script src="/build/courseMapperAdmin.js"></script>
-<script src="/bower/datatables/media/js/jquery.dataTables.min.js" type="text/javascript"></script>
-<script src="/bower/datatables/media/js/dataTables.bootstrap.min.js" type="text/javascript"></script>
 <% include ../footer %>
