updated info page

--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -43,15 +43,12 @@
                         </div>
 
                         <div class="col-xs-12 col-sm-6">
-                            Implemented by R. Laksono <br>
-                            <h4>Technologies:</h4>
-                            <ul>
-                                <li>NodeJS, ExpressJS, PassportJS, Socket.io</li>
-                                <li>MongoDB, Mongoose</li>
-                                <li>AdminLTE, Bootstrap framework, jQuery, jQueryUI</li>
-                                <li>GridStack, JSPlumb, QuillJS</li>
-                                <li>Angular and many others</li>
-                            </ul>
+                            Implemented by R. Laksono. <br><br>
+
+                            Course Map Tool allows course participants to collaborate on creating or modifying course
+                            structures.
+                            The course structures are visualised as mind map. In it, participants can add course
+                            materials such as PDF, Videos and Links.
                         </div>
                     </div>
                 </div>
@@ -66,11 +63,8 @@
                             <img src="/img/pdf.png" style="width:100%">
                         </div>
                         <div class="col-xs-12 col-sm-6">
-                            Implemented by J. Klöckner and I. Dimitrialis.<br><h4>Technologies:</h4>
-                            <ul>
-                                <li>PDF.js</li>
-                                <li>Including some libraries from the list above and many other smaller libraries.</li>
-                            </ul>
+                            Implemented by J. Klöckner and I. Dimitrialis.<br>
+
                         </div>
                     </div>
 
@@ -85,13 +79,8 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-6"><img src="/img/video.png" style="width:100%">
                         </div>
-                        <div class="col-xs-12 col-sm-6">Implemented by M. Momchil.<br> <h4>Technologies:</h4>
-                            <ul>
-                                <li>Videogular</li>
-                                <li>FootprintJS</li>
-                                <li>Including some libraries from the list above and many other smaller libraries.</li>
+                        <div class="col-xs-12 col-sm-6">Implemented by M. Momchil.<br>
 
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -101,23 +90,34 @@
                 </div>
                 <div class="box-body">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-6"><h4>Technologies:</h4>
-                            <ul>
-                                <li>ChartJS</li>
-                                <li>Including some libraries from the list above and many other smaller libraries.</li>
-
-                            </ul>
-                        </div>
                         <div class="col-xs-12 col-sm-6"> Implemented by Z. Sofyan.<br>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="box">
+                <div class="box-header"><h4>Technologies</h4>
+                </div>
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <ul>
+                                <li>NodeJS, ExpressJS, PassportJS, Socket.io</li>
+                                <li>MongoDB, Mongoose</li>
+                                <li>AdminLTE, Bootstrap framework, jQuery, jQueryUI</li>
+                                <li>GridStack, JSPlumb, QuillJS</li>
+                                <li>Angular and many others</li>
+                                <li>PDF.js</li>
+                                <li>Videogular</li>
+                                <li>FootprintJS</li>
+                                <li>ChartJS</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-</div>
-
-</section>
-</div>
 </div><!-- ./wrapper -->
 <% include ../jsfooter %>
 <% include ../footer %>
