Peer Review Creation, Fetching Peer Review, Delete Peer Review

--- a/views/admin-lte/course/peerAssessment/peerAssessmentActionBar.ejs
+++ b/views/admin-lte/course/peerAssessment/peerAssessmentActionBar.ejs
@@ -1,8 +1,8 @@
 <ul ng-controller="PeerAssessmentController">
     <li ng-show="isOwner || isManager || isAdmin">
         <a style="cursor: pointer;"
-           data-toggle="modal" data-target="#addNewTopicModal"
-           title="Add New Topic" onclick="alert('hello')">
+           data-toggle="modal" data-target="#addNewAssignmentModal"
+           title="New Peer Review">
             <i class="ionicons ion-android-add"></i> &nbsp; NEW PEER REVIEW</a>
     </li>
 </ul>
