--- a/views/admin-lte/course/peerAssessment/peerAssessment.ejs
+++ b/views/admin-lte/course/peerAssessment/peerAssessment.ejs
@@ -1,1 +1,32 @@
-fdsfsdfdsfdsf
+<div ng-controller="PeerAssessmentController">
+    <div class="col-md-11">
+        <div ng-show="peerreviews.length == 0">
+            <h5>No Peer Reviews for this course yet</h5>
+        </div>
+        <table class="table table-hover" ng-show="peerreviews.length > 0">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Publication Date</th>
+                    <th>Due Date</th>
+                    <th>Total Marks</th>
+                    <th ng-show="isOwner || isManager || isAdmin"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="review in peerreviews">
+                    <td>{{review.title}}</td>
+                    <td>{{review.publicationDate | date:'dd.MM.yyyy HH:mm'}}</td>
+                    <td>{{review.dueDate | date:'dd.MM.yyyy HH:mm'}}</td>
+                    <td>{{review.totalMarks}}</td>
+                    <td ng-show="isOwner || isManager || isAdmin">
+                        <i class="ion-edit" style="font-size: medium"></i> &nbsp;
+                        <a href="" ng-click="openDeleteConfirmationModal(review._id)"> <i class="ion-ios-trash" style="font-size: large"></i> </a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <% include addNewAssignmentModal %>
+    <% include confirmDeleteAssignmentModal %>
+</div>
