--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -44,6 +44,9 @@
     <link href="/src/video-annotations/styles/styles.css" rel="stylesheet" type="text/css"/>
     <link href="/src/countmap/countmap.css" rel="stylesheet" type="text/css">
 
+    <!-- Peer Assessment Css -->
+    <link href="/angular-peerassessment/peerAssessment.css"  rel="stylesheet" type="text/css" />
+
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
