--- a/views/my-course/created-courses.ejs
+++ b/views/my-course/created-courses.ejs
@@ -1,15 +1,45 @@
 <div ng-controller="CourseListCreatedController">
-    <table class="table table-striped">
-        <tbody>
-        <tr>
-            <th style="width:10px;">Nr.</th>
-            <th>{{headerTitle}}</th>
-        </tr>
-        <tr ng-repeat="created in courseCreated">
-            <td>{{$index+1}}.</td>
-            <td><a href="/course/{{created.slug}}/#/cid/{{created._id}}"> {{created.name}} </a></td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="col-xs-12">
+        <div class="box-group" id="accordion">
+            <div class="panel box box-primary" ng-repeat="created in courseCreated | orderBy: 'name'">
+                <div class="box-header with-border">
+                    <h4 class="box-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse-created{{$index}}" aria-expanded="false" class="collapsed">
+                            {{created.name}} <i class="fa fa-caret-down"></i>
+                        </a>
+                    </h4>
+                    <small class="label label-success pull-right" style="font-size: 13px;" title="number of discussion you created"><i class="fa fa-comments-o"></i> {{(newsfeedData | filter:isDiscussion | filter:isAdded | filter:(created._id)).length}}</small>
+                    <small class="label label-success pull-right" style="font-size: 13px; margin-right: 2px;" title="number of Pdf material you added"><i class="fa fa-file-pdf-o"></i> {{(courseCreatedResources | filter:isPdf | filter:(created._id) | filter:(created.createdBy)).length}}</small>
+                    <small class="label label-success pull-right" style="font-size: 13px; margin-right: 2px;" title="number of video material you added"><i class="fa fa-file-movie-o"></i> {{(courseCreatedResources | filter:isVideo | filter:(created._id) | filter:(created.createdBy)).length}}</small>
+                </div>
+                <div id="collapse-created{{$index}}" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                    <div class="box-body">
+                        <table class="table table-striped">
+                            <tbody>
+                                <tr ng-repeat="resource in courseCreatedResources | orderBy: 'treeNodeId.name'" ng-if="resource.courseId == created._id">
+                                    <td ng-if="resource.type=='pdf'">
+                                        <a href="/treeNode/{{resource.treeNodeId._id}}/#/cid/{{resource.courseId}}/nid/{{resource.treeNodeId._id}}?tab=pdf" class="" title="pdf material">
+                                            <i class="fa fa-file-pdf-o"></i> {{resource.treeNodeId.name}}
+                                        </a>
+                                        <small class="label label-primary pull-right" style="font-size: 12px;" title="number of pdf annotation you created"><i class="fa fa-pencil"></i> <i class="fa fa-file-pdf-o"></i> {{(newsfeedData | filter:isPdfAnno | filter:isAdded | filter:(resource.treeNodeId._id)).length}}</small>
+                                        <small class="label label-primary pull-right" style="font-size: 12px; margin-right: 2px;" title="number of link you created"><i class="fa fa-link"></i> {{(newsfeedData | filter:isLink | filter:isAdded | filter:(resource.treeNodeId._id)).length}}</small>
+                                        <i class="fa fa-user pull-right" style="color: #3c8dbc; font-size: 14px; margin-right: 2px;" ng-if="resource.createdBy == created.createdBy" title="this is the content you created"></i>
+                                    </td>
+                                    <td ng-if="resource.type!='pdf'">
+                                        <a href="/treeNode/{{resource.treeNodeId._id}}/#/cid/{{resource.courseId}}/nid/{{resource.treeNodeId._id}}?tab=video" class="" title="video material">
+                                            <i class="fa fa-file-movie-o"></i> {{resource.treeNodeId.name}}
+                                        </a>
+                                        <small class="label label-primary pull-right" style="font-size: 12px;" title="number of video annotation you created"><i class="fa fa-pencil"></i> <i class="fa fa-file-movie-o"></i> {{(newsfeedData | filter:isPdfAnno | filter:isAdded | filter:(resource.treeNodeId._id)).length}}</small>
+                                        <small class="label label-primary pull-right" style="font-size: 12px; margin-right: 2px;" title="number of link you created"><i class="fa fa-link"></i> {{(newsfeedData | filter:isLink | filter:isAdded | filter:(resource.treeNodeId._id)).length}}</small>
+                                        <i class="fa fa-user pull-right" style="color: #3c8dbc; font-size: 14px; margin-right: 2px;" ng-if="resource.createdBy == created.createdBy" title="this is the content you created"></i>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
