--- a/views/admin-lte/course/peerAssessment/editAssignmentModal.ejs
+++ b/views/admin-lte/course/peerAssessment/editAssignmentModal.ejs
@@ -1,13 +1,13 @@
 <!-- course edit form -->
 <div class="row">
-    <div class="modal" id="addNewAssignmentModal" tabindex="-1" role="dialog"
-         aria-labelledby="New Peer Review" aria-hidden="true" ng-controller="NewPeerReviewController">
+    <div class="modal" id="editAssignmentModal" tabindex="-1" role="dialog"
+         aria-labelledby="Edit Peer Review" aria-hidden="true" ng-controller="EditPeerReviewController">
         <section class="content">
             <div class="row row-centered">
                 <div class="col-xs-12 col-lg-9 col-md-9 col-sm-9 col col-centered">
                     <div class="box no-border no-round">
                         <div class="box-header with-border">
-                            <h3 class="box-title">New Peer Review</h3>
+                            <h3 class="box-title">Edit Peer Review</h3>
 
                             <div class="box-tools pull-right">
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span
@@ -57,13 +57,21 @@
                                                 <a href="" ng-click="deleteSelectedFiles(f.name)"> <i class="ion-close-round"></i></a>
                                                 <br>
                                             </div>
+                                            <div ng-repeat="doc in newAssignObj.displayDocumentsList">
+                                                <div class="label label-info">
+                                                    <a href="{{doc.link}}" target="_blank" style="color: white"> &nbsp; <span>{{doc.name}}</span> &nbsp;</a>
+                                                </div>
+                                                &nbsp;
+                                                <a href="" ng-click="deleteUploadedFiles(doc.link)"> <i class="ion-close-round"></i></a>
+                                                <br>
+                                            </div>
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="inputGroupSubmmission" class="col-sm-4 control-label">Allow Group Submission</label>
                                         <div class="col-sm-1">
-                                            <input type="checkbox" id="inputGroupSubmmission" ng-model="newAssignObj.groupSubmission" class="checkbox-line-adjust"/>
+                                            <input type="checkbox" id="inputGroupSubmission" ng-model="newAssignObj.groupSubmission" class="checkbox-line-adjust"/>
                                         </div>
                                     </div>
 
@@ -120,6 +128,14 @@
                                                 <a href="" ng-click="deleteSelectedSolutions(f.name)"> <i class="ion-close-round"></i></a>
                                                 <br>
                                             </div>
+                                            <div ng-repeat="doc in newAssignObj.displaySolutionsList">
+                                                <div class="label label-info">
+                                                    <a href="{{doc.link}}" target="_blank" style="color: white"> &nbsp; <span>{{doc.name}}</span> &nbsp;</a>
+                                                </div>
+                                                &nbsp;
+                                                <a href="" ng-click="deleteUploadedSolutions(doc.link)"> <i class="ion-close-round"></i></a>
+                                                <br>
+                                            </div>
                                         </div>
                                     </div>
 
@@ -128,7 +144,7 @@
                                         <error-block ng-show="errors.length > 0" messages="errors"></error-block>
                                         <!-- Button -->
                                         <div class="controls pull-right">
-                                            <button class="btn btn-primary" ng-click="createPeerReview()"> Save
+                                            <button class="btn btn-primary" ng-click="editPeerReview()"> Save
                                                 <spinner show="isLoading"></spinner>
                                             </button>
 
